apps/guardrail-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guardrail-api
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guardrail-api
  template:
    metadata:
      labels:
        app: guardrail-api
      annotations:
        configmap.reloader.stakater.com/reload: "guardrail-config"
        secret.reloader.stakater.com/reload: "guardrail-secrets"
    spec:
      serviceAccountName: guardrail-api-sa
      containers:
        - name: guardrail-api
          image: ghcr.io/rcaelers/guardrail-server:placeholder
          command: ["/app/guardrail"]
          args: ["api", "-C", "/config"]
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /config/01-config.yaml
              subPath: 01-config.yaml
            - name: secret-volume
              mountPath: /config/02-secret.yaml
              subPath: secrets
          startupProbe:
            httpGet:
              path: /api/live
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /api/live
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/ready
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 30
            failureThreshold: 6
      volumes:
        - name: config-volume
          configMap:
            name: guardrail-config
        - name: secret-volume
          secret:
            secretName: guardrail-secrets
